<resources>
    <string name="app_name">PopArticlesTest</string>
    <string name="main_title">Most Viewed Articles</string>
    <string name="daily">Today</string>
    <string name="monthtly">Last week</string>
    <string name="weekly">Last month</string>
    <string name="no_internet_limited_content">Bad connection!</string>
    <string name="general_error_message">Something wrong!</string>
    <string name="retry_again">Again</string>
    <string name="header_string">header:title</string>

</resources>